syntax = "proto3";
package lavanet.lava.subscription;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/lavanet/lava/v3/x/subscription/types";

message TrackedCu {
  uint64 cu = 1; // CU counter for CU after QoS consideration
}

message CuTrackerTimerData {
  uint64 block = 1; // sub block
  cosmos.base.v1beta1.Coin credit = 2 [(gogoproto.nullable) = false]; // credit to be used for rewards
}

message TrackedCuInfo {
  string provider = 1;
  string chainID = 2;
  uint64 trackedCu = 3;
  uint64 block = 4;
}
